[package]
description = "Parity Ethereum client"
name = "parity"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>", "Oasis Labs Inc. <feedback@oasislabs.com>"]

[dependencies]
ethcore = { path = "ethcore" }
ethcore-bytes = { path = "util/bytes" }
ethcore-io = { path = "util/io" }
ethcore-logger = { path = "logger" }
ethcore-transaction = { path = "ethcore/transaction" }
ethkey = { path = "ethkey" }
rlp = { path = "util/rlp" }
parity-reactor = { path = "util/reactor" }
parity-rpc = { path = "rpc" }
parity-version = { path = "util/version" }
path = { path = "util/path" }
panic_hook = { path = "util/panic_hook" }
keccak-hash = { path = "util/hash" }
kvdb = { path = "util/kvdb" }
journaldb = { path = "util/journaldb" }
mem = { path = "util/mem" }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
fake-fetch = { path = "util/fake-fetch" }

[features]
default = []
json-tests = ["ethcore/json-tests"]
test-heavy = ["ethcore/test-heavy"]
evm-debug = ["ethcore/evm-debug"]
evm-debug-tests = ["ethcore/evm-debug-tests"]
slow-blocks = ["ethcore/slow-blocks"]
final = ["parity-version/final"]
ethkey-test = ["ethkey/test"]
use-wasmer-runtime = ["ethcore/use-wasmer-runtime"]
wasi-debug-stdio = ["ethcore/wasi-debug-stdio"]

[lib]
path = "parity/lib.rs"

[profile.dev]
panic = "unwind"

[profile.release]
debug = false
lto = false
panic = "abort"

[workspace]
members = [
	"ethcore/wasm/macros",
	"ethcore/types",
]

[patch.crates-io]
# TODO: Remove when merged upstream (briansmith/ring#738).
ring = { git = "https://github.com/akash-fortanix/ring", branch = "sgx-target" }
# TODO: Remove when merged upstream (rust-lang-deprecated/rustc-serialize#195).
rustc-serialize = { git = "https://github.com/jethrogb/rustc-serialize", branch = "portability" }
# NOTE: Required because heapsize doesn't work on SGX due to a different allocator.
heapsize = { git = "https://github.com/oasislabs/heapsize", branch = "sgx-target" }
