[package]
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
edit-distance = "2.0"
secp256k1-plus = { git = "https://github.com/oasislabs/rust-secp256k1", branch = "feature/rand_optional" }
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
lazy_static = "1.0"
log = "0.3"
mem = { path = "../util/mem" }
quick-error = "1.2"
rustc-hex = "1.0"
tiny-keccak = "1.4"
