[package]
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
secp256k1-plus = { git = "https://github.com/oasislabs/rust-secp256k1", branch = "feature/rand_optional" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
lazy_static = "1.0"
log = "0.3"
mem = { path = "../util/mem" }
quick-error = "1.2"
rustc-hex = "1.0"
tiny-keccak = "1.4"
rand = { version = "0.3", optional = true }

[features]
test = ["secp256k1-plus/rand", "rand"]
