[package]
description = "Registar for Parity"
name = "registrar"
version = "0.0.1"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = "0.1"
ethabi = { git = "https://github.com/ekiden/ethabi", branch = "ekiden" }
ethabi-derive = { git = "https://github.com/ekiden/ethabi", branch = "ekiden" }
ethabi-contract = { git = "https://github.com/ekiden/ethabi", branch = "ekiden" }
keccak-hash = { path = "../util/hash" }
