[package]
description = "Parity JSON-RPC servers."
name = "parity-rpc"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
ansi_term = "0.10"
cid = "0.3"
futures = "0.1.6"
futures-cpupool = "0.1"
log = "0.3"
multihash ="0.8"
order-stat = "0.1"
parking_lot = "0.5"
rand = "0.4.2"
rustc-hex = "1.0"
semver = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tiny-keccak = "1.4"
tokio-timer = "0.1"
transient-hashmap = "0.4"
itertools = "0.5"

jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-pubsub = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }

ethcore = { path = "../ethcore" }
ethcore-bytes = { path = "../util/bytes" }
ethcore-crypto = { path = "../ethcore/crypto" }
ethcore-devtools = { path = "../devtools" }
ethcore-logger = { path = "../logger" }
ethcore-transaction = { path = "../ethcore/transaction" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }

ethjson = { path = "../json" }
ethkey = { path = "../ethkey" }
keccak-hash = { path = "../util/hash" }
parity-reactor = { path = "../util/reactor" }
parity-version = { path = "../util/version" }
patricia-trie = { path = "../util/patricia_trie" }
rlp = { path = "../util/rlp" }
stats = { path = "../util/stats" }
vm = { path = "../ethcore/vm" }

[dev-dependencies]
fake-fetch = { path = "../util/fake-fetch" }
kvdb-memorydb = { path = "../util/kvdb-memorydb" }
macros = { path = "../util/macros" }
pretty_assertions = "0.1"
