[package]
description = "Parity smart network connections"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "node-filter"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = ".."}
ethcore-network = { path = "../../util/network" }
ethcore-network-devp2p = { path = "../../util/network-devp2p" }
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
log = "0.3"
parking_lot = "0.5"
ethabi = { git = "https://github.com/oasislabs/ethabi", branch = "ekiden" }
ethabi-derive = { git = "https://github.com/oasislabs/ethabi", branch = "ekiden" }
ethabi-contract = { git = "https://github.com/oasislabs/ethabi", branch = "ekiden" }
lru-cache = "0.1"

[dev-dependencies]
kvdb-memorydb = { path = "../../util/kvdb-memorydb" }
ethcore-io = { path = "../../util/io" }
tempdir = "0.3"
