[package]
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
ethcore-bytes = { path = "../../util/bytes" }
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
patricia-trie = { path = "../../util/patricia_trie" }
log = "0.3"
common-types = { path = "../types" }
ethjson = { path = "../../json" }
rlp = { path = "../../util/rlp" }
keccak-hash = { path = "../../util/hash" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
elastic-array = "0.10"
