[package]
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
blockchain-traits = "0.2"
mantle-types = "0.2"
byteorder = "1.0"
ethcore-bytes = { path = "../../util/bytes" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
patricia-trie = { path = "../../util/patricia_trie" }
log = "0.3"
common-types = { path = "../types" }
ethjson = { path = "../../json" }
rlp = { path = "../../util/rlp" }
keccak-hash = { path = "../../util/hash" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elastic-array = "0.10"
