[package]
name = "wasmer"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
byteorder = "1.0"
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
log = "0.3"
parity-wasm = "0.31"
# libc = "0.2"
pwasm-utils = "0.2"
vm = { path = "../vm" }
ethcore-logger = { path = "../../logger" }
keccak-hash = { path = "../../util/hash" }
wasmer-runtime = "0.4.2"
wasmer-runtime-core = "0.4.2"
wasmer-clif-backend = "0.4.2"
rayon = "1.0.3"

[dev-dependencies]
ethcore-logger = { path = "../../logger" }
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.9.0"