[package]
description = "Standalone blockchain bloom filter"
homepage = "https://github.com/debris/bloomchain"
name = "bloomchain"
version = "0.2.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
keywords = ["ethereum", "ethcore", "bloom", "chain", "filter"]

[dependencies]
ethbloom = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }

[dev-dependencies]
rustc-hex = "1.0"
rand = "0.6.5"
