[package]
name = "util-error"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rlp = { path = "../rlp" }
kvdb = { path = "../kvdb" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
error-chain = { version = "0.10", default-features = false }
rustc-hex = "1.0"
