[package]
description = "Rust bindings for tinykeccak C library"
homepage = "https://github.com/paritytech/keccak-hash"
readme = "README.md"
license = "GPL-3.0"
name = "keccak-hash"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
tiny-keccak = "1.4"

[dev-dependencies]
tempdir = "0.3"
