[package]
name = "kvdb-rocksdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
elastic-array = "0.10"
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
kvdb = { path = "../kvdb" }
log = "0.3"
num_cpus = "1.0"
parking_lot = "0.5"
regex = "0.2"
parity-rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }
interleaved-ordered = "0.1.0"

[dev-dependencies]
tempdir = "0.3"
