[package]
name = "patricia-trie"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
log = "0.3"
ethcore-bytes = { version = "0.1.0", path = "../bytes" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
keccak-hash = { version = "0.1.0", path = "../hash" }
hashdb = { version = "0.1.1", path = "../hashdb" }
rlp = { version = "0.2.1", path = "../rlp" }
triehash = { version = "0.1.0", path = "../triehash" }
memorydb = { version = "0.1.0", path = "../memorydb" }

[dev-dependencies]
trie-standardmap = { path = "../trie-standardmap" }
