[package]
name = "trie-standardmap"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Standard test map for profiling tries"

[dependencies]
ethcore-bytes = { path = "../bytes" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
keccak-hash = { path = "../hash" }
rlp = { path = "../rlp" }
